syntax = "proto3";

package product;

option java_multiple_files = true;
option java_package = "org.vinio.product.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetProduct (ProductGetRequest) returns (Product);
  rpc GetAllProducts (Empty) returns (ProductList);
}

message Product {
  int32 id = 1;             // используется для delete/put
  string name = 2;          // используется для post/put
  double price = 3;         // используется для post/put
  string category = 4;      // используется для post/put
  int32 count = 5;          // используется для post/put
}

message ProductGetRequest {
  int32 id = 1;
}

message ProductList {
  repeated Product products = 1;
}

message Empty {}

// Используем для запросов с Rabbit
message ProductOtherRequest {
  string type = 1;          // тип запроса
  Product product = 2;      // сам продукт
}

// Используется для ответа в Rabbit
message SimpleResponse {
  string status = 1;
}